tests/NormalTests/paczka1/small_fuzzy/97729005.err
Error in line 2: PLUVq6 S663 91,8
Error in line 3: ZpCs A947 39,5
